# Recipe-Database

./: CMakeLists.txt  README.md  Recipe-library.txt  app  compare-ingredients
src/: CMakeLists.txt  Import-Recipes.c  Recipes.csv  app.c
src/Compare/: compare-ingredients.c  compare-library.c  compare-library.h
src/Compare ingredients/: CMakeLists.txt  compare-ingredients.c  compare-library.c  compare-library.h
src/Compare ingredients/CSV/: Recipe.csv  Stored.csv
src/Compare/CSV/: Recipe.csv  Stored.csv
test/: CMakeLists.txt  test_functions.c
